    version in the archives is >=0.9).
  * debian/kvirc-data.links: Added symlink for usr/share/pixmaps/kvirc.png, as
    it is the same as the 48x48 hicolor icon.
  * debian/kvirc.install: Added the man pages, as upstream installs them in
    the correct places now, our dh_installman hack isn't needed anymore.
  * debian/kvirc.manpages: Deleted (see above).

 -- Kai Wasserbäch <curan@debian.org>  Wed, 23 Feb 2011 21:21:29 +0100

kvirc (4:4.1.1~svn5507-1) unstable; urgency=low

  The "Cunning Advisor" release.

  * Synced to upstream's SVN revision 5507.
  * debian/kvirc-data.preinst: Removed. Upgrades from stable won't need it.
  * debian/watch: Replace the "latest" part with "([\d\.]+)" to make us
    independent of the upstream symlink.
  * debian/README.Debian:
    - Removed obsolete parts about Python and upgrades from 3.4.
    - Added notice about handling default script issues.
  * debian/README.source: Updated for 4.1.1.
  * debian/{compat,control,rules}: Updates for debhelper 8.
  * debian/patches/10_fix_desktop_entry.patch: Refreshed.

 -- Kai Wasserbäch <curan@debian.org>  Wed, 23 Feb 2011 13:19:39 +0100

kvirc (4:4.1.1~svn5467-1) unstable; urgency=low

  The combined "Twisted Experiment" and "Nocturnal Raid" release.

  [ Kai Wasserbäch ]
  * Synced to upstream's SVN revision 5467.
  * debian/rules:
    - Added .PHONY line.
    - Resurrect -DMANUAL_REVISION, got lost somewhere and we build SVN
      revisions again.
    - Replace "-DWITH_NO_EMBEDDED_CODE=YES" with "-DWANT_CRYPTOPP=YES".
    - Change the remaining -DWITH/-DWITHOUT to the new -DWANT syntax.
  * debian/control:
    - Removed DMUA, I'm a DD now.
    - Changed my e-mail address.
    - Removed unneeded relationships (no upgrades over two releases are
      supported).
    - Fix Suggests for kvirc-dbg.
    - kvirc-data: Make the "Suggests: kvirc" a Recommends, doesn't make much
      sense to install the -data package without the program.